; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_pcnt.c_pcnt_isr_register.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_pcnt.c_pcnt_isr_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCNT_ADDRESS_ERR_STR = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ETS_PCNT_INTR_SOURCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pcnt_isr_register(void (i8*)* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca void (i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store void (i8*)* %0, void (i8*)** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load void (i8*)*, void (i8*)** %5, align 8
  %10 = icmp ne void (i8*)* %9, null
  %11 = zext i1 %10 to i32
  %12 = load i32, i32* @PCNT_ADDRESS_ERR_STR, align 4
  %13 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %14 = call i32 @PCNT_CHECK(i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* @ETS_PCNT_INTR_SOURCE, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load void (i8*)*, void (i8*)** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @esp_intr_alloc(i32 %15, i32 %16, void (i8*)* %17, i8* %18, i32* %19)
  ret i32 %20
}

declare dso_local i32 @PCNT_CHECK(i32, i32, i32) #1

declare dso_local i32 @esp_intr_alloc(i32, i32, void (i8*)*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
